<resources>
    <string name="app_name">UltraLink</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listening">Listening</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="trash">Trash</string>
    <string name="rubber">Rubber</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="username">Username</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="search_users">Search Users</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="haven_t_registered_yet">Haven\'t registered yet?</string>
    <string name="register_now">Register now</string>
    <string name="welcome_to_ultralink">Welcome to UltraLink!</string>
    <string name="enter_your_medical_specialty">Enter your medical specialty</string>
    <string name="enter_your_current_hospital">Enter your current hospital</string>
    <string name="enter_your_years_of_experience">Enter your years of experience</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="search_by">Search by:</string>
    <string name="hospital">Hospital</string>
    <string name="specialty">Specialty</string>
    <string name="min_years_of_experience">Min years of experience</string>
    <string name="click_to_change_your_profile_picture">Click to change your profile picture</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="update_profile">Update profile</string>
    <string name="not_connected_select_a_device_to_connect_to">Not connected: select a device to connect to</string>
    <string name="send">Send</string>
    <string name="gallery">Gallery</string>
    <string name = "save_to_gallery">Save to gallery</string>
    <string name = "trim">Trim</string>
    <string name = "acquire_images">Acquire images</string>
    <string name = "settings">Settings</string>
    <string name = "upload">Upload</string>
    <string name="receiving">Receiving multimedia. Please don\'t leave the screen.</string>
</resources>